--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,6 +2,7 @@ $primary-color: #292b2e;
 $secondary-color: #5d4d7a;
 $white: #b2b2b2;
 $black: #585858;
+$github-grey: #24292e;
 
 $magenta: #ff54ff;
 $dark-magenta: #a31db1;
