--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,7 +26,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.8;
+  opacity: 0.937;
   visibility: hidden; }
   .menu.show {
     visibility: visible; }
@@ -234,7 +234,7 @@ main {
     color: #b2b2b2; }
 
 .btn-dark {
-  background: black;
+  background: #191c20;
   color: #585858; }
 
 .btn-light {
