--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
-@import "config";
-@import "menu";
+@import 'config';
+@import 'menu';
 
 * {
 	box-sizing: border-box;
@@ -7,11 +7,11 @@
 
 body {
 	@include background;
-	background: $primary-color;
-	color: set-text-color($primary-color);
 	height: 100%;
 	margin: 0;
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	background: $primary-color;
+	color: set-text-color($primary-color);
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	line-height: 1.5;
 }
 
@@ -27,8 +27,8 @@ h3 {
 	}
 
 	&.sm-heading {
-		margin-bottom: 2rem;
 		padding: 0.2rem 1rem;
+		margin-bottom: 2rem;
 		background: rgba(lighten($primary-color, 2), 0.5);
 	}
 }
@@ -50,25 +50,26 @@ header {
 }
 
 main {
-	padding: 4rem;
 	// height: 100%;
 	min-height: calc(100vh - 60px);
+	padding: 4rem;
 
 	.icons {
 		margin-top: 1rem;
 
 		a {
 			padding: 0.4rem;
+			@include easeOut;
 
 			&:hover {
 				color: $secondary-color;
-				@include easeOut();
 			}
 		}
 	}
 
 	&#home {
 		overflow: hidden;
+
 		h1 {
 			margin-top: 20vh;
 		}
@@ -79,98 +80,101 @@ main {
 	display: grid;
 	grid-gap: 30px;
 	grid-template-areas:
-	'bioimage bio bio'
-	'job1 job2 job3';
+		'bioimage bio bio'
+		'job1 job2 job3';
 	grid-template-columns: repeat(3, 1fr);
-}
 
-.bio-image {
-	grid-area: bioimage;
-	margin: auto;
-	border-radius: 50%;
-	border: $secondary-color 3px solid;
-}
-
-.bio {
-	grid-area: bio;
-	font-size: 1.5rem;
-}
-
-.job-1 {
-	grid-area: job1
-}
-
-.job-2 {
-	grid-area: job2
-}
-
-.job-3 {
-	grid-area: job3
-}
-
-.job {
-	background: lighten($primary-color, 5);
-	padding: 0.5rem;
-	border-bottom: $secondary-color 5px solid;
-
-	h3 {
-		color: $secondary-color
+	.bio-image {
+		margin: auto;
+		border: $secondary-color 3px solid;
+		border-radius: 50%;
+		grid-area: bioimage;
 	}
-	h5 {
-		color: darken($primary-color, 1);
+
+	.bio {
+		font-size: 1.5rem;
+		grid-area: bio;
+	}
+
+	.job-1 {
+		grid-area: job1;
+	}
+
+	.job-2 {
+		grid-area: job2;
+	}
+
+	.job-3 {
+		grid-area: job3;
+	}
+
+	.job {
+		padding: 0.5rem;
+		border-bottom: $secondary-color 5px solid;
+		background: lighten($primary-color, 5);
+
+		h3 {
+			color: $secondary-color;
+		}
+
+		h5 {
+			color: darken($primary-color, 1);
+		}
 	}
 }
 
 // Work/Projects
 .projects {
-  display: grid;
-  grid-gap: 0.7rem;
-  grid-template-columns: repeat(3, 1fr);
+	display: grid;
+	grid-gap: 0.7rem;
+	grid-template-columns: repeat(3, 1fr);
 
-  img {
-    width: 100%;
-    border: 3px $white solid;
+	img {
+		width: 100%;
+		border: 3px $white solid;
 
-    &:hover {
-      opacity: 0.5;
-      border-color: $secondary-color;
-      @include easeOut;
-    }
-  }
+		&:hover {
+			border-color: $secondary-color;
+			opacity: 0.5;
+			@include easeOut;
+		}
+	}
 }
 
 // Contact Page
 .boxes {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-top: 1rem;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-evenly;
+	margin-top: 1rem;
 
-  div {
-    font-size: 2rem;
-    border: 3px #fff solid;
-    padding: 1.5rem 2.5rem;
-    margin-bottom: 3rem;
-    @include easeOut;
+	div {
+		padding: 1.5rem 2.5rem;
+		margin-bottom: 3rem;
+		border: 3px #fff solid;
+		font-size: 2rem;
+		@include easeOut;
 
-    &:hover {
-      padding: 0.5rem 1.5rem;
-      background: $secondary-color;
-      color: set-text-color($secondary-color);
-      span {
-        color: set-text-color($secondary-color);
-      }
-    }
-  }
+		&:hover {
+			padding: 0.5rem 1.5rem;
+			background: $secondary-color;
+			color: set-text-color($secondary-color);
+
+			span {
+				color: set-text-color($secondary-color);
+			}
+		}
+	}
 }
 
 // Button Styles
 .btn {
 	display: block;
 	padding: 0.5rem 1rem;
-	border: 0;
 	margin-bottom: 0.3rem;
+	border: 0;
+
 	&:hover {
 		background: $secondary-color;
 		color: set-text-color($secondary-color);
@@ -190,12 +194,11 @@ main {
 }
 
 #main-footer {
-	text-align: center;
+	height: 60px;
 	padding: 1rem;
 	background: darken($primary-color, 10);
 	color: set-text-color($primary-color);
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-	height: 60px;
+	text-align: center;
 }
 
-@import "mobile";
+@import 'mobile';
