--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,8 @@
 .menu-btn {
   position: absolute;
   z-index: 3;
-  right: 35px;
   top: 35px;
+  right: 35px;
   cursor: pointer;
   transition: all 0.5s ease-out; }
   .menu-btn .btn-line {
@@ -14,34 +14,34 @@
   .menu-btn.close {
     transform: rotate(180deg); }
     .menu-btn.close .btn-line:nth-child(1) {
-      transform: rotate(45deg) translate(5px, 5px);
-      background: #5d4d7a; }
+      background: #5d4d7a;
+      transform: rotate(45deg) translate(5px, 5px); }
     .menu-btn.close .btn-line:nth-child(2) {
       opacity: 0; }
     .menu-btn.close .btn-line:nth-child(3) {
-      transform: rotate(-45deg) translate(7px, -6px);
-      background: #5d4d7a; }
+      background: #5d4d7a;
+      transform: rotate(-45deg) translate(7px, -6px); }
 
 .menu {
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.937;
+  opacity: 0.9;
   visibility: hidden; }
   .menu.show {
     visibility: visible; }
   .menu-branding, .menu-nav {
     display: flex;
+    overflow: hidden;
+    width: 50%;
+    height: 100vh;
     flex-flow: column wrap;
     align-items: center;
     justify-content: center;
-    float: left;
-    width: 50%;
-    height: 100vh;
-    overflow: hidden; }
+    float: left; }
   .menu-nav {
-    margin: 0;
     padding: 0;
+    margin: 0;
     background: #1d1e21;
     list-style: none;
     transform: translate3d(0, -100%, 0);
@@ -50,16 +50,16 @@
       transform: translate3d(0, 0, 0); }
   .menu-branding {
     background: #292b2e;
-    transition: all 0.5s ease-out;
-    transform: translate3d(0, 100%, 0); }
+    transform: translate3d(0, 100%, 0);
+    transition: all 0.5s ease-out; }
     .menu-branding.show {
       transform: translate3d(0, 0, 0); }
     .menu-branding .portrait {
       width: 250px;
       height: 250px;
+      border: solid 3px #5d4d7a;
       background: url("../img/portrait.jpg");
-      border-radius: 50%;
-      border: solid 3px #5d4d7a; }
+      border-radius: 50%; }
   .menu .nav-item {
     transform: translate3d(600px, 0, 0);
     transition: all 0.5s ease-out; }
@@ -68,14 +68,14 @@
     .menu .nav-item.current > a {
       color: #5d4d7a; }
   .menu .nav-link {
-    display: inline-block;
     position: relative;
-    font-size: 30px;
-    text-transform: uppercase;
+    display: inline-block;
     padding: 1rem 0;
-    font-weight: 300;
     color: #b2b2b2;
+    font-size: 30px;
+    font-weight: 300;
     text-decoration: none;
+    text-transform: uppercase;
     transition: all 0.5s ease-out; }
     .menu .nav-link:hover {
       color: #5d4d7a; }
@@ -96,25 +96,25 @@
   box-sizing: border-box; }
 
 body {
-  background: #292b2e;
-  color: #b2b2b2;
   height: 100%;
   margin: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background: #292b2e;
+  color: #b2b2b2;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5; }
   body#bg-img {
     background: url(../img/background.jpg);
     background-attachment: fixed;
     background-size: cover; }
     body#bg-img:after {
-      content: '';
       position: absolute;
+      z-index: -1;
       top: 0;
       right: 0;
       width: 100%;
       height: 100%;
-      z-index: -1;
-      background: rgba(41, 43, 46, 0.8); }
+      background: rgba(41, 43, 46, 0.8);
+      content: ''; }
 
 h1,
 h2,
@@ -128,8 +128,8 @@ h3 {
   h1.sm-heading,
   h2.sm-heading,
   h3.sm-heading {
-    margin-bottom: 2rem;
     padding: 0.2rem 1rem;
+    margin-bottom: 2rem;
     background: rgba(46, 48, 51, 0.5); }
 
 a {
@@ -145,15 +145,15 @@ header {
   color: #5d4d7a; }
 
 main {
-  padding: 4rem;
-  min-height: calc(100vh - 60px); }
+  min-height: calc(100vh - 60px);
+  padding: 4rem; }
   main .icons {
     margin-top: 1rem; }
     main .icons a {
-      padding: 0.4rem; }
+      padding: 0.4rem;
+      transition: all 0.5s ease-out; }
       main .icons a:hover {
-        color: #5d4d7a;
-        transition: all 0.5s ease-out; }
+        color: #5d4d7a; }
   main#home {
     overflow: hidden; }
     main#home h1 {
@@ -164,34 +164,28 @@ main {
   grid-gap: 30px;
   grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
   grid-template-columns: repeat(3, 1fr); }
-
-.bio-image {
-  grid-area: bioimage;
-  margin: auto;
-  border-radius: 50%;
-  border: #5d4d7a 3px solid; }
-
-.bio {
-  grid-area: bio;
-  font-size: 1.5rem; }
-
-.job-1 {
-  grid-area: job1; }
-
-.job-2 {
-  grid-area: job2; }
-
-.job-3 {
-  grid-area: job3; }
-
-.job {
-  background: #35383b;
-  padding: 0.5rem;
-  border-bottom: #5d4d7a 5px solid; }
-  .job h3 {
-    color: #5d4d7a; }
-  .job h5 {
-    color: #27282b; }
+  .about-info .bio-image {
+    margin: auto;
+    border: #5d4d7a 3px solid;
+    border-radius: 50%;
+    grid-area: bioimage; }
+  .about-info .bio {
+    font-size: 1.5rem;
+    grid-area: bio; }
+  .about-info .job-1 {
+    grid-area: job1; }
+  .about-info .job-2 {
+    grid-area: job2; }
+  .about-info .job-3 {
+    grid-area: job3; }
+  .about-info .job {
+    padding: 0.5rem;
+    border-bottom: #5d4d7a 5px solid;
+    background: #35383b; }
+    .about-info .job h3 {
+      color: #5d4d7a; }
+    .about-info .job h5 {
+      color: #27282b; }
 
 .projects {
   display: grid;
@@ -201,21 +195,21 @@ main {
     width: 100%;
     border: 3px #b2b2b2 solid; }
     .projects img:hover {
-      opacity: 0.5;
       border-color: #5d4d7a;
+      opacity: 0.5;
       transition: all 0.5s ease-out; }
 
 .boxes {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
   align-items: center;
+  justify-content: space-evenly;
   margin-top: 1rem; }
   .boxes div {
-    font-size: 2rem;
-    border: 3px #fff solid;
     padding: 1.5rem 2.5rem;
     margin-bottom: 3rem;
+    border: 3px #fff solid;
+    font-size: 2rem;
     transition: all 0.5s ease-out; }
     .boxes div:hover {
       padding: 0.5rem 1.5rem;
@@ -227,8 +221,8 @@ main {
 .btn, .btn-dark, .btn-light {
   display: block;
   padding: 0.5rem 1rem;
-  border: 0;
-  margin-bottom: 0.3rem; }
+  margin-bottom: 0.3rem;
+  border: 0; }
   .btn:hover, .btn-dark:hover, .btn-light:hover {
     background: #5d4d7a;
     color: #b2b2b2; }
@@ -242,12 +236,11 @@ main {
   color: #333; }
 
 #main-footer {
-  text-align: center;
+  height: 60px;
   padding: 1rem;
   background: #111213;
   color: #b2b2b2;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  height: 60px; }
+  text-align: center; }
 
 @media screen and (min-width: 1171px) {
   .projects {
@@ -257,32 +250,32 @@ main {
   .projects {
     grid-template-columns: repeat(3, 1fr); } }
 
-@media screen and (max-width: 768) {
+@media screen and (max-width: 768px) {
   main {
     align-items: center;
     text-align: center; }
     main .lg-heading {
-      line-height: 1;
-      margin-bottom: 1rem; }
-  .ul-menu-nav,
+      margin-bottom: 1rem;
+      line-height: 1; }
+  ul.menu-nav,
   div.menu-branding {
-    float: none;
     width: 100%;
-    min-height: 0; }
-    .ul-menu-nav.show,
+    min-height: 0;
+    float: none; }
+    ul.menu-nav.show,
     div.menu-branding.show {
       transform: translate3d(0, 0, 0); }
   .menu-nav {
     height: 75vh;
-    transform: translate3d(-100%, 0, 0);
-    font-size: 24px; }
+    font-size: 24px;
+    transform: translate3d(-100%, 0, 0); }
   .menu-branding {
     height: 25vh;
     transform: translate3d(100%, 0, 0); }
     .menu-branding .portrait {
-      background: url("../img/portrait_small.jpg");
       width: 150px;
-      height: 150px; }
+      height: 150px;
+      background: url("../img/portrait_small.jpg"); }
   .about-info {
     grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
     grid-template-columns: 1fr; }
