--- a/src/sass/brands.scss
+++ b/src/sass/brands.scss
@@ -5,7 +5,7 @@
 @import 'variables';
 
 @font-face {
-	font-display: fallback; //$fa-font-display;
+	font-display: swap; //$fa-font-display;
 	font-family: 'Font Awesome 5 Brands';
 	font-style: normal;
 	font-weight: normal;
