--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,7 +3,7 @@
 
 $fa-font-path: '../fonts' !default;
 $fa-font-size-base: 16px !default;
-$fa-font-display: fallback;
+$fa-font-display: optional;
 $fa-css-prefix: fa !default;
 $fa-version: '5.7.2' !default;
 $fa-border-color: #eee !default;
